--- a/index.html
+++ b/index.html
@@ -39,7 +39,64 @@
 	</header>
 
 	<section>
-		
+		<img src="screen4-images/main_pic.png">
+
+		<div>
+			<h2>
+				ABOUT PCC LUBRICANTS
+			</h2>
+			<h3>
+				A Heritage of Speciallizing in Lubricants
+			</h3>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
+			</p>
+			<p>
+				Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. 
+			</p>
+		</div> 
+		<div id="container">
+			<img src="screen4-images/logo.png">
+			<p>PPC now has bulk Delivery/Squirt Fill capabillties for DEF</p>
+		</div>
+
+		<div id="bottom-container">
+			<div class="box">
+				<h2>Automotive</h2>
+				<img src="screen4-images/automotive.png">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.
+				</p>
+				<img class="read-more" src="screen4-images/read-more-icon.png">
+			</div>
+
+			<div class="box">
+				<h2>Commercial</h2>
+				<img src="screen4-images/commercial.png">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.
+				</p>
+				<img class="read-more" src="screen4-images/read-more-icon.png">
+			</div>
+
+			<div class="box">
+				<h2>Industrial</h2>
+				<img src="screen4-images/commercial.png">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.
+				</p>
+				<img class="read-more" src="screen4-images/read-more-icon.png">
+			</div>
+
+			<div class="box">
+				<h2>Desiel Exhaust</h2>
+				<img src="screen4-images/commercial.png">
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.
+				</p>
+				<img class="read-more" src="screen4-images/read-more-icon.png">
+			</div>
+		</div>
 	</section>
 
 </body>
