Fixed errors, edited index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<header>
-		<img src="screen4-images/logo.png">
+		<img src="screen4-images/logo.png" alt="logo">
 		<h1>CALL TOLL FREE 1-800-772-5823</h1>
 		<nav>
 			<ul>
@@ -39,7 +39,7 @@
 	</header>
 
 	<section>
-		<img src="screen4-images/main_pic.png">
+		<img src="screen4-images/main_pic.png" alt="main">
 
 		<div>
 			<h2>
@@ -56,45 +56,45 @@
 			</p>
 		</div> 
 		<div id="container">
-			<img src="screen4-images/logo.png">
+			<img src="screen4-images/logo.png" alt="small-logo">
 			<p>PPC now has bulk Delivery/Squirt Fill capabillties for DEF</p>
 		</div>
 
 		<div id="bottom-container">
 			<div class="box">
 				<h2>Automotive</h2>
-				<img src="screen4-images/automotive.png">
+				<img src="screen4-images/automotive.png" alt="automotive">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.
 				</p>
-				<img class="read-more" src="screen4-images/read-more-icon.png">
+				<img class="read-more" src="screen4-images/read-more-icon.png" alt="read more">
 			</div>
 
 			<div class="box">
 				<h2>Commercial</h2>
-				<img src="screen4-images/commercial.png">
+				<img src="screen4-images/commercial.png" alt="commercial">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.
 				</p>
-				<img class="read-more" src="screen4-images/read-more-icon.png">
+				<img class="read-more" src="screen4-images/read-more-icon.png" alt="read more">
 			</div>
 
 			<div class="box">
 				<h2>Industrial</h2>
-				<img src="screen4-images/commercial.png">
+				<img src="screen4-images/industrial.png" alt="industrial">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.
 				</p>
-				<img class="read-more" src="screen4-images/read-more-icon.png">
+				<img class="read-more" src="screen4-images/read-more-icon.png" alt="read more">
 			</div>
 
 			<div class="box">
 				<h2>Desiel Exhaust</h2>
-				<img src="screen4-images/commercial.png">
+				<img src="screen4-images/diesel.png" alt="diesel">
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.
 				</p>
-				<img class="read-more" src="screen4-images/read-more-icon.png">
+				<img class="read-more" src="screen4-images/read-more-icon.png" alt="read more">
 			</div>
 		</div>
 	</section>
